AUT-4199: Add principal validation to MFAMethodsCreateHandler