@@ -13,6 +13,7 @@ import uk.gov.di.authentication.shared.entity.mfa.MFAMethod;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethodType;
 import uk.gov.di.authentication.shared.entity.mfa.MfaDetail;
 import uk.gov.di.authentication.shared.entity.mfa.SmsMfaDetail;
+import uk.gov.di.authentication.shared.helpers.ClientSubjectHelper;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 import uk.gov.di.authentication.sharedtest.basetest.ApiGatewayHandlerIntegrationTest;
 
@@ -36,7 +37,9 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
     private static final String TEST_PHONE_NUMBER = "07700900000";
     private static final String TEST_PHONE_NUMBER_TWO = "07700900111";
     private static final String TEST_CREDENTIAL = "ZZ11BB22CC33DD44EE55FF66GG77HH88II99JJ00";
+    private static final String INTERNAL_SECTOR_HOST = "test.account.gov.uk";
     private static String TEST_PUBLIC_SUBJECT;
+    private static String TEST_INTERNAL_SUBJECT;
     private static final MFAMethod defaultPrioritySms =
             MFAMethod.smsMfaMethod(
                     true,
@@ -73,6 +76,12 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
         userStore.signUp(TEST_EMAIL, TEST_PASSWORD);
         TEST_PUBLIC_SUBJECT =
                 userStore.getUserProfileFromEmail(TEST_EMAIL).get().getPublicSubjectID();
+        byte[] salt = userStore.addSalt(TEST_EMAIL);
+        TEST_INTERNAL_SUBJECT =
+                ClientSubjectHelper.calculatePairwiseIdentifier(
+                        userStore.getUserProfileFromEmail(TEST_EMAIL).get().getSubjectID(),
+                        INTERNAL_SECTOR_HOST,
+                        salt);
     }
 
     @Test
@@ -86,7 +95,9 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                         new SmsMfaDetail(TEST_PHONE_NUMBER))),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
-                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT));
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
+
         assertEquals(200, response.getStatusCode());
 
         List<MFAMethod> mfaMethods = userStore.getMfaMethod(TEST_EMAIL);
@@ -129,7 +140,8 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                         new AuthAppMfaDetail(TEST_CREDENTIAL))),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
-                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT));
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
         assertEquals(200, response.getStatusCode());
 
         List<MFAMethod> mfaMethods = userStore.getMfaMethod(TEST_EMAIL);
@@ -187,7 +199,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", "incorrect-public-subject-id"),
-                        Collections.emptyMap());
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
         assertEquals(404, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
     }
@@ -218,7 +230,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1001));
     }
@@ -237,7 +249,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1068));
@@ -256,7 +268,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1069));
@@ -276,10 +288,29 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", TEST_INTERNAL_SUBJECT));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1070));
+    }
+
+    @Test
+    void shouldReturn404WhenPrincipalIsInvalid() {
+        var response =
+                makeRequest(
+                        Optional.of(
+                                constructRequestBody(
+                                        PriorityIdentifier.BACKUP,
+                                        new AuthAppMfaDetail(
+                                                MFAMethodType.AUTH_APP,
+                                                "AA99BB88CC77DD66EE55FF44GG33HH22II11JJ00"))),
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
+                        Map.of("principalId", "invalid"));
+
+        assertEquals(404, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1071));
     }
 
     private static String constructRequestBody(
